--- a/Task2/SJF/index.html
+++ b/Task2/SJF/index.html
@@ -8,9 +8,10 @@
 <body>
   <div class="container">
     <h1>Shortest Job First (SJF) Algorithm</h1>
-    <label for="numProcesses">Number of Processes:</label>
-    <input type="number" id="numProcesses" min="1" step="1">
-    <button onclick="getInput()">Submit</button>
+    <!-- <label for="numProcesses">Number of Processes:</label> -->
+    <!-- <input type="number" id="numProcesses" min="1" step="1" class="input" > -->
+    <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
+    <button onclick="getInput()" class="learn-more">Submit</button>
 
     <div id="processesInput" style="display:none;">
       <h2>Enter Execution Time for Each Process:</h2>
@@ -18,7 +19,7 @@
         <!-- The table will be dynamically generated here -->
       </table>
 
-      <button onclick="calculateSJF()">Calculate SJF</button>
+      <button onclick="calculateSJF()" class="learn-more"  style="margin-top: 14px; margin-bottom: 14px;">Calculate SJF</button>
       <h2>SJF Results:</h2>
       <table id="sjfTable">
           <!-- SJF results will be displayed here -->
