--- a/Task2/SRT/index.html
+++ b/Task2/SRT/index.html
@@ -8,9 +8,9 @@
 <body>
   <div class="container">
     <h1>Shortest Remaining Time (SRT) Algorithm</h1>
-    <label for="numProcesses">Number of Processes:</label>
-    <input type="number" id="numProcesses" min="1" step="1">
-    <button onclick="getInput()">Submit</button>
+    <!-- <label for="numProcesses">Number of Processes:</label> -->
+    <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
+    <button onclick="getInput()" class="learn-more">Submit</button>
 
     <div id="processesInput" style="display:none;">
       <h2>Enter Arrival and Execution Time for Each Process:</h2>
@@ -18,7 +18,7 @@
         <!-- The table will be dynamically generated here -->
       </table>
 
-      <button onclick="calculateSRTF()">Calculate SRTF</button>
+      <button onclick="calculateSRTF()" class="learn-more"  style="margin-top: 14px; margin-bottom: 14px;">Calculate SRTF</button>
       <h2>SRTF Results:</h2>
       <table id="srtfTable">
           <!-- SRTF results will be displayed here -->
