--- a/Task2/SJF/index.html
+++ b/Task2/SJF/index.html
@@ -10,8 +10,10 @@
     <h1>Shortest Job First (SJF) Algorithm</h1>
     <!-- <label for="numProcesses">Number of Processes:</label> -->
     <!-- <input type="number" id="numProcesses" min="1" step="1" class="input" > -->
-    <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
-    <button onclick="getInput()" class="learn-more">Submit</button>
+    <form onsubmit="return getInput()">
+      <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
+      <button type="submit" class="learn-more">Submit</button>
+    </form>
 
     <div id="processesInput" style="display:none;">
       <h2>Enter Execution Time for Each Process:</h2>
