--- a/Task2/HRRN/index.html
+++ b/Task2/HRRN/index.html
@@ -8,23 +8,11 @@
 <body>
   <div class="container">
     <h1>Highest Response Ratio Next Algorithm</h1>
-
-
-  
        <!-- <label for="numProcesses">Number of Processes:</label>   -->
-       <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
-      <!-- <input type="number" id="numProcesses"    min="1" step="1"> -->
-      <!-- <input type="password" placeholder="Password" name="text" class="input"> -->
-    
-      <button onclick="getInput()" class="learn-more" >Submit</button>
-      
-
-    <!-- <label for="numProcesses">Number of Processes:</label> -->
-    <!-- <input type="number" id="numProcesses" min="1" step="1"> -->
-
-
-  
-
+      <form onsubmit="return getInput()">
+        <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
+        <button type="submit" class="learn-more" >Submit</button>
+      </form>
     <div id="processesInput" style="display:none;">
       <h2>Enter Arrival and Burst Time for Each Process:</h2>
       <table id="processTable">
