--- a/Task2/SJF/index.html
+++ b/Task2/SJF/index.html
@@ -8,8 +8,7 @@
 <body>
   <div class="container">
     <h1>Shortest Job First (SJF) Algorithm</h1>
-    <!-- <label for="numProcesses">Number of Processes:</label> -->
-    <!-- <input type="number" id="numProcesses" min="1" step="1" class="input" > -->
+ 
     <form onsubmit="return getInput()">
       <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
       <button type="submit" class="learn-more">Submit</button>
@@ -18,7 +17,7 @@
     <div id="processesInput" style="display:none;">
       <h2>Enter Execution Time for Each Process:</h2>
       <table id="processTable">
-        <!-- The table will be dynamically generated here -->
+     
       </table>
 
       <button onclick="calculateSJF()" class="learn-more"  style="margin-top: 14px; margin-bottom: 14px;">Calculate SJF</button>
@@ -28,6 +27,7 @@
         </table>
       
     </div>
+    <div id="metrics"></div>
     <div id="visualization"></div>
   </div>
  
