feat : metrics table added

--- a/Task2/HRRN/index.html
+++ b/Task2/HRRN/index.html
@@ -20,6 +20,7 @@
       </table>
 
       <button onclick="calculateHRRN()" class="learn-more" style="margin-top: 14px; margin-bottom: 14px;">Calculate HRRN</button>
+      <button onclick="generateRandomValues()" class="learn-more2" >Generate Random Values</button>
       <h2>HRRN Results:</h2>
       <table id="hrrnTable">
           <!-- HRRN results will be displayed here -->
