--- a/Task2/SRT/index.html
+++ b/Task2/SRT/index.html
@@ -8,9 +8,7 @@
 <body>
   <div class="container">
     <h1>Shortest Remaining Time (SRT) Algorithm</h1>
-    <!-- <label for="numProcesses">Number of Processes:</label> -->
-    <!-- <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
-    <button onclick="getInput()" class="learn-more">Submit</button> -->
+ 
     <form onsubmit="return getInput()">
       <input type="number" id="numProcesses" min="1" step="1" placeholder="Number of Processes:" name="number" class="input" style="margin-right: 4px;">
       <button type="submit" class="learn-more">Submit</button>
@@ -23,6 +21,7 @@
       </table>
 
       <button onclick="calculateSRTF()" class="learn-more"  style="margin-top: 14px; margin-bottom: 14px;">Calculate SRTF</button>
+      <button onclick="generateRandomValues()" class="learn-more2" >Generate Random Values</button>
       <h2>SRTF Results:</h2>
       <table id="srtfTable">
           <!-- SRTF results will be displayed here -->
