--- a/Task2/HRRN/index.html
+++ b/Task2/HRRN/index.html
@@ -4,6 +4,8 @@
   <title>Highest Response Ratio Next Algorithm</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/anime/3.2.1/anime.min.js"></script>
+
 </head>
 <body>
   <div class="container">
